--- a/index.html
+++ b/index.html
@@ -8,8 +8,44 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 
-<body>
-    This is our page!
+<body id="body-splash">
+    <div class="hero is-rackspace-red">
+        <div class="hero-body">
+            <h2 class="subtitle">
+                Rackspace
+            </h2>
+            <h1 class="title">
+                Cloud Guide
+            </h1>
+            <h2 class="subtitle">
+                Navigate your cloud journey with Rackspace at your side.
+            </h2>
+        </div>
+    </div>
+    <section class="section is-rackspace-black">
+        <div class="columns is-8">
+            <div class="column">
+                <p>
+                    At what point does your buyer’s “best fit” cloud become clear? As their business grows, so does their need for greater performance.
+                </p>
+                <p>
+                    Asking the right questions at the right time with “just-in-time” learning empowers you to understand the problems your buyer
+                    needs solving. By letting Rackspace Cloud Guide be at your side you can easily navigate your buyer on
+                    your shared cloud journey.
+                </p>
+                <p>
+                    <a href="#">Why partner with Rackspace?</a>
+                </p>
+                <p>
+                    <a href="#">How does Cloud Guide help you navigate your journey?</a>
+                </p>
+                <p>
+                    <a href="#" class="button is-small is-rackspace-blue">Start Guide</a>
+                </p>
+            </div>
+        </div>
+        <img class="logo" src="./logo.png">
+    </section>
 </body>
 
 </html>
